@@ -1,4 +1,8 @@
 2018-07-15 (0.12.13)
+	ANDROID: migrate build from eclispe to android studio
+	ANDROID: fix issue #66
+
+2018-07-15 (0.12.13)
 	SDL: Added window.setSize function
 
 2018-07-07 (0.12.13)
